# tobey

./: .gitignore  CMakeLists.txt  README.md  Tobey.sln  main.cpp  utils.cpp  utils.h
.github/workflows/: distribute.yml  pr_release_test.yml  release.yml  tests.yml
FrontMatter/: Class1.cs  FrontMatter.cs  FrontMatter.csproj  Parser.cs
FrontMatterTests/: FrontMatterTest.cs  FrontMatterTests.csproj  ParserTest.cs
Htmt/: Helper.cs  IAttributeParser.cs  Parser.cs  ParserConfig.cs
Htmt/AttributeParsers/: ForAttributeParser.cs  HrefAttributeParser.cs  IfAttributeParser.cs  InnerHtmlAttributeParser.cs  InnerTextAttributeParser.cs  OuterTextAttributeParser.cs  UnlessAttributeParser.cs
HtmtTests/: AttributeParserTest.cs  ParserTest.cs
Markdown/: Block.cs  IBlockIdentifier.cs  IBlockParser.cs  IInlineParser.cs  IParser.cs  Markdown.cs  Parser.cs
Markdown/Html/: BlockParser.cs  IBlockStitcher.cs  InlineParser.cs  Parser.cs
MarkdownTests/: MarkdownTests.csproj
Tobey/: Compiler.cs  DataComposer.cs  Program.cs  Tobey.csproj  Watcher.cs
Tobey/DataComposer/: Composer.cs  IBoolean.cs
TobeyTests/: DataComposerTest.cs  TobeyTests.csproj
YAML/: Class1.cs  Data.cs  Node.cs  Parser.cs  YAML.cs
YAMLTests/: ParserTest.cs  YAMLTest.cs  YAMLTests.csproj
include/frontmatter/: frontmatter.cpp  frontmatter.h
include/markdown/: block_parser_interface.h  inline_parser_interface.hpp  markdown.cpp  markdown.h  utils.h  (+3 more)
libs/: inja.hpp  mustache.hpp
src/: templating.cpp  templating.hpp  tobey.cpp  tobey.h  tobey.hpp  utils.cpp  utils.h
test/: test.md  test.yaml  testfm.md
(+81 files in other folders)
